fix translate and flipgame db bug